# usb-defense-system

./: .gitignore  CHANGELOG.md  LEARN_FROM_JARVIS.md  README.md  SECURITY.md  WHEN_YOU_RETURN.md
docs/: ARCHITECTURE.md  DEMO_SCENARIOS.md  DEPLOYMENT_RUNBOOK.md  INSTALLATION.md  LINUX_PRIMER.md  PHASE1_ACCEPTANCE.md  PHASE1_DESIGN.md  REPORT.md  REPORT_OUTLINE.md  SLIDES.md  VIVA_CHEATSHEET.md  generate_setup_guide.py  generate_summary.py
learning_artifact/: CHANGELOG.md  README.md  demo.py  pyproject.toml
learning_artifact/docs/: COMPARISON.md
learning_artifact/netwatch/: __init__.py  __main__.py  auth.py  baseline.py  cli.py  config.py  daemon.py  events.py  oui.py  responder.py  sensors.py  state.py  tui.py
learning_artifact/scripts/: install.sh
learning_artifact/systemd/: netwatch.service
learning_artifact/tests/: conftest.py  test_auth.py  test_baseline.py  test_cli.py  test_config.py  test_daemon.py  test_events.py  test_oui.py  test_responder.py  test_sensors.py
scripts/: build_guide_pdf.py
src/: pyproject.toml  requirements.txt
src/config/: config.yaml  logind-no-autovts.conf  usbguard-rules.conf  whitelist.example.json  xorg-novtswitch.conf
src/scripts/: generate_alarm.py  install.sh  run_dev.sh  setup.py  uninstall.sh
src/systemd/: usb-defense-ui.desktop  usb-defense.service
src/usbguard_defense/: __init__.py  alarm.py  auth.py  config.py  daemon.py  event_log.py  integrity.py  ipc.py  monitor.py  recovery.py  tty_lockdown.py  usbguard_iface.py  whitelist.py
src/usbguard_defense/tests/: __init__.py  simulate.py  test_auth.py  test_auth_lockout.py  test_config.py  test_event_log.py  test_integrity.py  test_ipc_permissions.py  test_recovery.py  test_simulate.py  test_tty_lockdown.py  test_ui_format.py  test_usbguard_iface.py  test_whitelist.py
src/usbguard_defense/ui/: __init__.py  dashboard.py  event_log.py  lockdown.py  main.py  settings.py  styles.py  whitelist_mgr.py
